--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ node_js:
    - "6"
    - "5"
    - "4"
-before_script:
-  - npm install coveralls mocha-lcov-reporter
-script: npm run travisci
+after_success:
+  - npm install -g codeclimate-test-reporter
+  - codeclimate-test-reporter < coverage/lcov.info
