--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "promise-retry": "^1.1.1"
   },
   "devDependencies": {
-    "aws-sdk": "^2.42.0",
+    "aws-sdk": "^2.43.0",
     "chai": "^3.5.0",
     "eslint": "^3.15.0",
-    "eslint-config-standard": "^6.2.0",
-    "eslint-plugin-promise": "^3.4.2",
-    "eslint-plugin-standard": "^2.0.1",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-node": "^4.2.2",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
     "istanbul": "^0.4.5",
     "lodash": "^4.17.4",
     "mocha": "^3.2.0",
