--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "kinesis",
     "stream",
     "readable",
-    "writable"
+    "writable",
+    "kcl",
+    "kpl",
+    "consumer",
+    "producer"
   ],
   "author": "Chris Chang <c@crccheck.com> (http://crccheck.com/blog)",
   "license": "Apache-2.0",
@@ -30,21 +34,21 @@
     "promise-retry": "^1.1.1"
   },
   "devDependencies": {
-    "aws-sdk": "^2.126.0",
+    "aws-sdk": "^2.135.0",
     "chai": "^4.1.2",
     "err-code": "^1.1.2",
-    "eslint": "^4.8.0",
+    "eslint": "^4.9.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.2.0",
-    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
-    "flow-bin": "^0.56.0",
+    "flow-bin": "^0.57.3",
     "husky": "^0.14.3",
     "istanbul": "^0.4.5",
     "lodash": "^4.17.4",
-    "mocha": "^4.0.0",
-    "sinon": "^4.0.0",
+    "mocha": "^4.0.1",
+    "sinon": "^4.0.1",
     "sinon-chai": "^2.14.0",
     "stream-array": "^1.1.2"
   },
