--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: node_js
 node_js:
-   - "8"
-   - "7"
-   - "6"
+  - "8"
+  - "7"
+  - "6"
+cache:
+  directories:
+    - node_modules
 addons:
  code_climate:
    repo_token: 3f8e52453d414ec26ca5ebcf710ceab3349acf736ce02491ec735beb08e97445
