--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "debug": "^3.1.0",
-    "flushwritable": "^1.0.0",
-    "promise-retry": "^1.1.1"
+    "flushwritable": "^1.0.0"
   },
   "devDependencies": {
     "aws-sdk": "^2.177.0",
