--- a/package.json
+++ b/package.json
@@ -30,13 +30,11 @@
   "license": "Apache-2.0",
   "dependencies": {
     "debug": "^3.1.0",
-    "flushwritable": "^1.0.0",
-    "promise-retry": "^1.1.1"
+    "flushwritable": "^1.0.0"
   },
   "devDependencies": {
     "aws-sdk": "^2.177.0",
     "chai": "^4.1.2",
-    "err-code": "^1.1.2",
     "eslint": "^4.14.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.8.0",
