--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "node lib/index.js",
     "lint": "eslint lib test",
     "pretest": "eslint lib test",
-    "test": "istanbul cover _mocha",
+    "test": "nyc mocha",
     "tdd": "mocha --watch --reporter dot --bail",
     "changelog": "echo \"$(changelog-maker && cat CHANGELOG.md)\" > CHANGELOG.md",
     "prepush": "npm test"
@@ -43,8 +43,8 @@
     "eslint-plugin-standard": "^4.0.0",
     "flow-bin": "^0.83.0",
     "husky": "^0.14.3",
-    "istanbul": "^0.4.5",
     "mocha": "^4.1.0",
+    "nyc": "^13.1.0",
     "sinon": "^4.1.3",
     "sinon-chai": "^2.14.0",
     "stream-array": "^1.1.2"
