--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "node lib/index.js",
     "lint": "eslint lib test",
     "pretest": "eslint lib test",
-    "test": "istanbul cover _mocha",
+    "test": "nyc mocha",
     "tdd": "mocha --watch --reporter dot --bail",
     "changelog": "echo \"$(changelog-maker && cat CHANGELOG.md)\" > CHANGELOG.md",
     "prepush": "npm test"
@@ -34,19 +34,19 @@
   },
   "devDependencies": {
     "aws-sdk": "^2.339.0",
-    "chai": "^4.1.2",
-    "eslint": "^4.14.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-standard": "^3.0.1",
+    "chai": "^4.2.0",
+    "eslint": "^5.7.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
     "flow-bin": "^0.83.0",
     "husky": "^0.14.3",
-    "istanbul": "^0.4.5",
     "mocha": "^4.1.0",
-    "sinon": "^4.1.3",
-    "sinon-chai": "^2.14.0",
+    "nyc": "^13.1.0",
+    "sinon": "^7.0.0",
+    "sinon-chai": "^3.2.0",
     "stream-array": "^1.1.2"
   },
   "repository": {
