--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Readable and writable streams for AWS Kinesis",
   "main": "lib/index.js",
   "engines": {
-    "node": ">6.0"
+    "node": ">=8.2.1"
   },
   "scripts": {
     "start": "node lib/index.js",
