--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "Readable and writable streams for AWS Kinesis",
   "main": "lib/index.js",
   "engines": {
-    "node": ">6.0"
+    "node": ">=8.2.1"
   },
   "scripts": {
     "start": "node lib/index.js",
-    "lint": "eslint lib test",
-    "pretest": "eslint lib test",
+    "lint": "eslint --report-unused-disable-directives .",
+    "posttest": "eslint --report-unused-disable-directives .",
     "test": "nyc mocha",
     "tdd": "mocha --watch --reporter dot --bail",
     "changelog": "echo \"$(changelog-maker && cat CHANGELOG.md)\" > CHANGELOG.md",
@@ -33,20 +33,18 @@
     "flushwritable": "^1.0.0"
   },
   "devDependencies": {
-    "aws-sdk": "^2.339.0",
+    "aws-sdk": "^2.358.0",
     "captain-git-hook": "^2.0.0",
-    "chai": "^4.2.0",
-    "eslint": "^5.7.0",
+    "eslint": "^5.9.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-node": "^8.0.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "flow-bin": "^0.83.0",
+    "flow-bin": "^0.86.0",
     "mocha": "^5.2.0",
     "nyc": "^13.1.0",
-    "sinon": "^7.0.0",
-    "sinon-chai": "^3.2.0",
+    "sinon": "^7.1.1",
     "stream-array": "^1.1.2"
   },
   "repository": {
@@ -56,5 +54,8 @@
   "bugs": {
     "url": "https://github.com/crccheck/kinesis-streams/issues"
   },
-  "homepage": "https://github.com/crccheck/kinesis-streams#readme"
+  "homepage": "https://github.com/crccheck/kinesis-streams#readme",
+  "eslintIgnore": [
+    "flow-typed"
+  ]
 }
